# texture-atlas

./: .gitignore  .gitmodules  CMakeLists.txt  Doxyfile  README.md  main.cpp
include/: app.h  file_loader.h  image.h  image_loader.h  jpeg_image.h  png_image.h  point.h  rect.h  report.h  texture.h
src/: app.cpp  file_loader.cpp  jpeg_image.cpp  png_image.cpp  point.cpp  rect.cpp  report.cpp  texture.cpp
test/: test_file_loader.cpp  test_jpeg_image.cpp  test_main.cpp  test_png_image.cpp  test_point.cpp  test_rect.cpp  test_texture.cpp
